welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:10: error: type mismatch;
 found   : Unit
 required: Int
if ((you >= 8 && date <= 2) || (you <= 2 && date >= 8))
^